[tool.poetry]
name = "flock"
version = "0.1.0"
description = ""
authors = ["Jeffrey Naujok <jnaujok@harvestwave.com>"]
readme = "README.md"
packages = [{include = "flock", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
